Tests de code node-webkit du tuto

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div>TODO write content</div>
+        <input id="open" type="file" style="display:none" accept="text/*"/>
+        <input id="save" type="file" nwsaveas style="display:none" accept="text/*"/>
+        <textarea id="editor" style="position:fixed;top:0;bottom:0;left:0;right:0"></textarea>
         <script src="../js/main.js"></script>
     </body>
 </html>
